 2010-08-31 00:20  asfernandes 
   M src/jrd/Optimizer.cpp
   M src/jrd/Optimizer.h
   M src/jrd/RecordSourceNodes.h
   M src/jrd/evl.cpp
   M src/jrd/evl_proto.h
   M src/jrd/exe.h
   M src/jrd/nod.h
   M src/jrd/opt.cpp
   M src/jrd/recsrc/BitmapTableScan.cpp
   M src/jrd/recsrc/IndexTableScan.cpp
   M src/jrd/recsrc/RecordSource.cpp
   M src/jrd/recsrc/RecordSource.h
Refactor nod_index and nod_bit_* to InversionNode

 2010-08-31 00:12  asfernandes 
   M doc/README.build.msvc.html
   M src/jrd/RecordSourceNodes.cpp
Misc

 2010-08-30 15:39  asfernandes 
   M src/jrd/nod.h
Small cleanup

 2010-08-29 20:20  asfernandes 
   M src/jrd/Optimizer.cpp
   M src/jrd/Optimizer.h
   M src/jrd/RecordSourceNodes.cpp
   M src/jrd/RecordSourceNodes.h
   M src/jrd/exe.h
   M src/jrd/nod.h
   M src/jrd/opt.cpp
   M src/jrd/par.cpp
   M src/misc/blrtable.cpp
Refactor plan nodes to PlanNode

 2010-08-29 18:25  asfernandes 
   M src/jrd/exe.cpp
   M src/jrd/exe.h
   M src/jrd/nod.h
Cleanup

 2010-08-29 18:20  asfernandes 
   M src/dsql/Visitors.h
   M src/jrd/Optimizer.cpp
   M src/jrd/Optimizer.h
   M src/jrd/RecordSourceNodes.cpp
   M src/jrd/RecordSourceNodes.h
   M src/jrd/cmp.cpp
   M src/jrd/exe.h
   M src/jrd/nod.h
   M src/jrd/opt.cpp
   M src/jrd/opt_proto.h
   M src/jrd/par.cpp
   M src/jrd/par_proto.h
   M src/jrd/recsrc/AggregatedStream.cpp
   M src/jrd/recsrc/HashJoin.cpp
   M src/jrd/recsrc/MergeJoin.cpp
   M src/jrd/recsrc/RecordSource.h
   M src/jrd/recsrc/RecursiveStream.cpp
   M src/jrd/recsrc/Union.cpp
   M src/jrd/recsrc/WindowedStream.cpp
   M src/misc/blrtable.cpp
Refactor nod_map and nod_sort to type-safe MapNode and SortNode

 2010-08-28 12:41  dimitr 
   M src/jrd/opt.cpp
Fixed CORE-2155: Join of SP with view or table may fail with 'No current record for fetch operation'.

 2010-08-28 08:52  dimitr 
   M src/jrd/cmp.cpp
Fixed the engine crash caused by the recent refactoring.

 2010-08-27 15:14  asfernandes 
   M builds/win32/msvc10/dsql_server.vcxproj