@@ -3,16 +3,16 @@
                *** DO NOT EDIT ***
   TO CHANGE ANY INFORMATION IN HERE PLEASE
   EDIT src/misc/writeBuildNum.sh
-  FORMAL BUILD NUMBER:28709
+  FORMAL BUILD NUMBER:28710
 */
 
-#define PRODUCT_VER_STRING "3.0.0.28709"
-#define FILE_VER_STRING "WI-T3.0.0.28709"
-#define LICENSE_VER_STRING "WI-T3.0.0.28709"
-#define FILE_VER_NUMBER 3, 0, 0, 28709
+#define PRODUCT_VER_STRING "3.0.0.28710"
+#define FILE_VER_STRING "WI-T3.0.0.28710"
+#define LICENSE_VER_STRING "WI-T3.0.0.28710"
+#define FILE_VER_NUMBER 3, 0, 0, 28710
 #define FB_MAJOR_VER "3"
 #define FB_MINOR_VER "0"
 #define FB_REV_NO "0"
-#define FB_BUILD_NO "28709"
+#define FB_BUILD_NO "28710"
 #define FB_BUILD_TYPE "T"
 #define FB_BUILD_SUFFIX "Firebird 3.0 Unstable"
